--- a/kubes/bins/templates/configmap.yaml
+++ b/kubes/bins/templates/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ include "bins.fullname" . }}-configmap
 data:
-  DB_HOST: {{ include "bins.fullname" }}-mariadb
+  DB_HOST: {{ include "bins.fullname" . }}-mariadb
   TZ: {{ .Values.timezone }}
   DB_DATABASE: {{ .Values.mariadb.auth.database }}
   DB_USER: root
